--- a/skiworld-Client/pom.xml
+++ b/skiworld-Client/pom.xml
@@ -1,92 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>esprit.skiworld</groupId>
-    <artifactId>skiworld-Client</artifactId>
-    <name>skiworld-Client</name>
+	<groupId>esprit.skiworld</groupId>
+	<artifactId>skiworld-Client</artifactId>
+	<name>skiworld-Client</name>
 
-    <packaging>jar</packaging>
-    <version>0.0.1-SNAPSHOT</version>
-    
-    <organization>
-        <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>esprit</name>
-    </organization>
+	<packaging>jar</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
-    <properties>
-        <slf4j.version>1.7.12</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
-    </properties>
+	<organization>
+		<!-- Used as the 'Vendor' for JNLP generation -->
+		<name>esprit</name>
+	</organization>
 
-    <build>
+	<properties>
+		<slf4j.version>1.7.12</slf4j.version>
+		<log4j.version>1.2.17</log4j.version>
+	</properties>
 
-        <finalName>skiworld-Client</finalName>
+	<build>
 
-        <plugins>
+		<finalName>skiworld-Client</finalName>
 
-            <plugin>
-                <groupId>com.zenjava</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.1.5</version>
-                <configuration>
+		<plugins>
 
-                    <mainClass>esprit.skiworld.skiworld_Client.MainApp</mainClass>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>8.1.5</version>
+				<configuration>
 
-                    <!-- only required if signing the jar file -->
-                    <keyStoreAlias>example-user</keyStoreAlias>
-                    <keyStorePassword>example-password</keyStorePassword>
-                    <allPermissions>true</allPermissions>
+					<mainClass>esprit.skiworld.skiworld_Client.MainApp</mainClass>
 
-                </configuration>
-            </plugin>
+					<!-- only required if signing the jar file -->
+					<keyStoreAlias>example-user</keyStoreAlias>
+					<keyStorePassword>example-password</keyStorePassword>
+					<allPermissions>true</allPermissions>
 
-        </plugins>
-    </build>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
 
-    <dependencies>
-    
-        <!-- MigLayout -->
+	<dependencies>
 
-        <dependency>
-            <groupId>com.miglayout</groupId>
-            <artifactId>miglayout-javafx</artifactId>
-            <version>5.0</version>
-        </dependency>
+		<!-- MigLayout -->
+		<dependency>
+			<groupId>esprit.skiworld</groupId>
+			<artifactId>skiworld-ejb</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-javafx</artifactId>
+			<version>5.0</version>
+		</dependency>
 
-        <!-- Apache Commons -->
+		<!-- Apache Commons -->
 
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-        </dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
-        <!-- Logging  -->
+		<!-- Logging -->
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 </project>
