--- a/skiworld-Client/pom.xml
+++ b/skiworld-Client/pom.xml
@@ -19,6 +19,8 @@
 	<properties>
 		<slf4j.version>1.7.12</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<build>
