--- a/skiworld-Client/pom.xml
+++ b/skiworld-Client/pom.xml
@@ -109,6 +109,16 @@
 			<version>9.0.0.Alpha1</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.40.12</version>
+		</dependency>
 	</dependencies>
 
 </project>
