--- a/skiworld-Client/pom.xml
+++ b/skiworld-Client/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>controlsfx</artifactId>
 			<version>8.40.12</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 
 </project>
